preserve toggle button colour in dark mode issue

--- a/style/_menutoggle.scss
+++ b/style/_menutoggle.scss
@@ -3,7 +3,7 @@
 #ham > span,
 #cross > span {
     display: block;
-    background: vars.$text-color;
+    background: vars.$toggle-btn-color;
     box-shadow: 1px 1px 2px rgb(37, 37, 37);
     border-radius: 2px;
     transition: .25s ease-in-out;
