--- a/style/_vars.scss
+++ b/style/_vars.scss
@@ -3,3 +3,4 @@ $main-color-gallery: rgb(36, 23, 16);
 $text-color:whitesmoke;
 $large-heading: rgba(255, 255, 255, 0.8);
 $toggle-btn-size: 70%;
+$toggle-btn-color: linear-gradient(90deg, rgba(255, 255, 255, 1) 63%, rgba(251, 255, 248, 1) 100%);
