--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@
 #ham > span,
 #cross > span {
   display: block;
-  background: whitesmoke;
+  background: linear-gradient(90deg, rgb(255, 255, 255) 63%, rgb(251, 255, 248) 100%);
   box-shadow: 1px 1px 2px rgb(37, 37, 37);
   border-radius: 2px;
   transition: 0.25s ease-in-out;
